[tool.poetry]
name = "cherryberry"
version = "0.0.1"
description = ""
authors = [ "mateusz" ]

[tool.poetry.dependencies]
python = "^3.9"
llama-cpp-python = "^0.2.25"
jinja2 = "^3.1.2"
langchain = "^0.0.340"
textual = "^0.44.0"
textual-dev = "^1.2.1"
orjson = "^3.9.10"
argparse = "^1.4.0"
ollama = ">=0.1.7"
